# image

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  LICENSE  Makefile  Makefile.am  README.md  configure.ac  projecteuler
cmake/: Toolchain-aarch64-linux-gnu.cmake  Toolchain-mingw-w64-x86_64.cmake  Toolchain-msvc.cmake  ccache.cmake  colordiagnostics.cmake  coverage.cmake  defaultbuildtype.cmake  docker.cmake  fmt.cmake  googletest.cmake  googletest.cmake.in  makecheck.cmake  uninstall.cmake
include/: Bitmap.hpp  BitmapCompressor.hpp  BitmapConverter.hpp  BitmapDataReader.hpp  BitmapReader.hpp  BitmapWriter.hpp  BlockCodec.hpp  BlockCompressor.hpp  BlockIterator.hpp  ColorDepth.hpp  ColorPalette.hpp  DirectDrawSurface.hpp  DirectDrawSurfaceCodec.hpp  DirectDrawSurfaceDecompressor.hpp  DirectDrawSurfaceReader.hpp  DirectDrawSurfaceWriter.hpp  DirectX.hpp  HighColor.hpp  ImageConverter.hpp  Pipeable.hpp  Reader.hpp  Texel.hpp  Time.hpp  TransformIterator.hpp  TrueColor.hpp  Writer.hpp  doxygen.hpp
src/: .gitignore  Bitmap.cpp  BitmapCompressor.cpp  BitmapConverter.cpp  BitmapDataReader.cpp  BitmapReader.cpp  BitmapWriter.cpp  BlockCompressor.cpp  CMakeLists.txt  ColorDepth.cpp  ColorPalette.cpp  DirectDrawSurface.cpp  DirectDrawSurfaceCodec.cpp  DirectDrawSurfaceDecompressor.cpp  DirectDrawSurfaceReader.cpp  DirectDrawSurfaceWriter.cpp  ImageConverter.cpp  Makefile.am  Texel.cpp  main.cpp
tst/: .gitignore  BitmapCompressor_test.cpp  BitmapConverter_test.cpp  BitmapDataReader_test.cpp  BitmapReader_test.cpp  BitmapWriter_test.cpp  Bitmap_test.cpp  BlockCodec_test.cpp  BlockCompressor_test.cpp  BlockIterator_test.cpp  CMakeLists.txt  ColorDepth_test.cpp  ColorPalette_test.cpp  DirectDrawSurfaceCodec_test.cpp  DirectDrawSurfaceDecompressor_test.cpp  DirectDrawSurfaceReader_test.cpp  DirectDrawSurfaceWriter_test.cpp  DirectDrawSurface_test.cpp  DirectX_test.cpp  Environment_test.cpp  HighColor_test.cpp  ImageConverter_test.cpp  Makefile  Makefile.am  MockBitmap.hpp  MockDirectDrawSurface.hpp  Pipeable_test.cpp  Texel_test.cpp  Time_test.cpp  TransformIterator_test.cpp  TrueColor_test.cpp  TuplePrinter.hpp  Writer.hpp
